4.0-3
- fixed bug in ezMixed when family=gaussian (default)
- changed author email address

4.0-2
- updated .Rbuildignore to ignore .gitignore
- reduced time it takes to check examples by encapsulating unnecessary examples in \dontrun{}
- fixed bug in ezANOVA/ezStats/ezPlot code that attempts to automatically fix situations when there are repeated wid levels across levels of between variables 

4.0-1
- All functions
-    Previously, ez used the .() function to permit referral to column names without having to use quotes or the my_data$my_column format. One still needs to use .() when supplying multiple column names, but in cases where an argument is being supplied with a single column name, you no longer even have to type .(); you can simply type the column name.
- ezANOVA
-    Added ability to specify covariates (applies to ezPlot and ezStats too)
-    Added "within_full" argument to implement proper automatic collapsing of cell means when values supplied to "within" represent a subset of the full design. (applies to ezPlot and ezStats too)
-    Fixed bug preventing use of returned aov object with stats::TukeyHSD()
-    Fixed bug that caused ezANOVA to return type-2 SS results even when type-3 SS results were requested
-    Fixed bug causing error when design is completely between-Ss and unbalanced (applies to ezPlot and ezStats too)
-    Corrected documentation, which previously reported an interpretation of a p-value as "the probability of the null hypothesis, given the data", when the proper interpretation is (of course) "probability of the data, given the null hypothesis".
- ezBoot
-     Added "show_progress" argument that permits turning on/off the progress bar
-     Added ability to perform computation in parallel using multiple cores
-     Added ability to perform a residuals bootstrap
-     Switched from "timeCI" progress bar to the simpler/faster "time" progress bar
-     Fixed bug causing error when lmer=TRUE and only 1 predictor variable is supplied