@@ -18,6 +18,7 @@ ezMixed(
     , gam_smooth = c('s','te')
     , gam_bs = 'ts'
     , gam_k = Inf
+	, use_bam = FALSE
     , alarm = FALSE
     , term_labels = NULL
     , highest = Inf
@@ -66,6 +67,9 @@ Character specifying the name of the smooth term to use when using gam.
 }
 \item{gam_k}{
 Numeric value specifying the maximum value for \code{k} to supply to calls to gam. Higher values yield longer computation times but may better capture non-linear phenomena. If set to \code{Inf} (default), \code{ezMixed} will automatically use the maximum possible value for k given the number of unique combinations of values in the numeric predictors being evaluated. If a finite positive value is supplied, k will be set to that value or less (if the supplied k exceeds the maximum possible k for a given effect).
+}
+\item{use_bam}{
+Logical. If TRUE, \code{\link[mgcv]{bam}} is used rather than \code{\link[mgcv]{gam}}.
 }
 \item{alarm}{
 Logical. If TRUE, call the \code{\link[utils]{alarm}} function when \code{\link{ezMixed}} completes.
